spacing fixes to meta

--- a/static/src/stylesheets/module/content-garnett/_types.scss
+++ b/static/src/stylesheets/module/content-garnett/_types.scss
@@ -148,6 +148,7 @@ $quote-mark: 35px;
         justify-content: space-between;
         margin-top: -$gs-baseline;
         margin-bottom: 0;
+        padding-top: 17px;
         @include mq(leftCol) {
             position: absolute;
         }
@@ -184,6 +185,7 @@ $quote-mark: 35px;
         max-width: 60px;
         order: 1;
         border-top: 0;
+        flex: 1 100%;
         @include mq($until: phablet) {
             padding-right: 0;
             margin-right: 0;
@@ -196,6 +198,7 @@ $quote-mark: 35px;
     .byline-img {
         margin-top: 0;
         margin-right: $gs-baseline/2;
+        margin-bottom: $gs-baseline;
         @include mq(phablet) {
             margin-right: 0;
         }
@@ -216,7 +219,7 @@ $quote-mark: 35px;
         color: #333333;
         font-style: italic;
         min-height: 0;
-
+        line-height: 1;
         span[itemprop='author'] {
             @include f-header;
             display: inline;
@@ -226,22 +229,25 @@ $quote-mark: 35px;
     }
 
     .content__dateline {
-        @include multiline(1, $garnett-neutral-4, top);
         order: 3;
-        border-top: 0;
+        border: 0;
         align-self: flex-end top;
         text-align: right;
         min-height: 0;
         margin-bottom: 0;
         max-width: 100px;
         margin-left: auto;
+        margin-top: -5px;
+        padding-top: $gs-baseline/3;
         @include mq(mobileLandscape) {
             max-width: 120px;
         }
         @include mq(leftCol) {
+            @include multiline(1, $garnett-neutral-4, top);
             text-align: left;
             max-width: none;
             margin-left: 0;
+            margin-top: 0;
             flex: 100%;
         }
     }
@@ -364,9 +370,6 @@ $quote-mark: 35px;
         @include multiline(1, $garnett-neutral-4, top);
         border-top: 0;
         padding-top: $gs-baseline / 2;
-        @include mq(leftCol) {
-            padding-top: 0;
-        }
     }
 
     .meta__numbers {
@@ -759,12 +762,15 @@ $quote-mark: 35px;
     }
 
     .content__meta-container {
-        margin-top: -55px;
+        background-image: none;
+        padding-top: 0;
+    }
+
+    .content__dateline {
+        margin-top: -48px;
         @include mq(leftCol) {
             margin-top: 0;
         }
-        background-image: none;
-        padding-top: 0;
     }
 
     .content__dateline:before {
